[package]
name = "amiga-lib-dumper"
version = "0.1.0"
edition = "2024"
description = "View code and data from amiga.lib libraries (m68k)"
repository = "https://github.com/retrokp/amiga-lib-dumper"
license = "0BSD"

[dependencies]
m68kdecode = { git = "https://github.com/deplinenoise/m68kdecode.git", rev = "12f82e523203324dcaf0a5e49deef01866d15519" }
